--- a/css/font.css
+++ b/css/font.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Century Gothic';
-    src: url('../font/CenturyGothic.eotCenturyGothic.eot');
-    src: url('../font/CenturyGothic.eotCenturyGothic.eot?#iefix') format('embedded-opentype'),
-        url('../font/CenturyGothic.eotCenturyGothic.woff2') format('woff2'),
+    src: url('../font/CenturyGothic.eot');
+    src: url('../font/CenturyGothic.eot?#iefix') format('embedded-opentype'),
+        url('../font/CenturyGothic.woff2') format('woff2'),
         url('../font/CenturyGothic.eotCenturyGothic.woff') format('woff'),
-        url('../font/CenturyGothic.eotCenturyGothic.ttf') format('truetype'),
-        url('../font/CenturyGothic.eotCenturyGothic.svg#CenturyGothic') format('svg');
+        url('../font/CenturyGothic.ttf') format('truetype'),
+        url('../font/CenturyGothic.svg#CenturyGothic') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -13,12 +13,12 @@
 
 @font-face {
     font-family: 'Ubuntu';
-    src: url('../font/CenturyGothic.eotUbuntu-Regular.eot');
-    src: url('../font/CenturyGothic.eotUbuntu-Regular.eot?#iefix') format('embedded-opentype'),
-        url('../font/CenturyGothic.eotUbuntu-Regular.woff2') format('woff2'),
-        url('../font/CenturyGothic.eotUbuntu-Regular.woff') format('woff'),
-        url('../font/CenturyGothic.eotUbuntu-Regular.ttf') format('truetype'),
-        url('../font/CenturyGothic.eotUbuntu-Regular.svg#Ubuntu-Regular') format('svg');
+    src: url('../font/Ubuntu-Regular.eot');
+    src: url('../font/Ubuntu-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../font/Ubuntu-Regular.woff2') format('woff2'),
+        url('../font/Ubuntu-Regular.woff') format('woff'),
+        url('../font/Ubuntu-Regular.ttf') format('truetype'),
+        url('../font/Ubuntu-Regular.svg#Ubuntu-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
