--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ footer {
     background-color: #758BFD;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 .footerdiv {
     display: flex;
@@ -165,4 +166,12 @@ h2 {
 .facebook {
     color: white;
     font-size: 20px;
+}
+
+.ft_img {
+    width: 80%;
+    display: flex;
+    justify-content: end;
+    gap:5px
+    
 }
